--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Pakistan Trace Pharma</title>
   <base href="/D-pharmasy/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/logo-icon.png">
 </head>
 
 <body>
