--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-J5PIBRTF.js" type="module"></script></body>
+<script src="polyfills-5CFQRCPP.js" type="module"></script><script src="main-GLQQHCBU.js" type="module"></script></body>
 
 </html>
